samples/_failures_safe/1761188378_bf5632_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dd900f55.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_dd900f55.c:164:51: error: expected ‘;’ at end of input
  164 |         case TOKEN_STRING: printf("STRING"); break
      |                                                   ^
      |                                                   ;
./samples/SAFE/__tmp_dd900f55.c:164:9: error: expected declaration or statement at end of input
  164 |         case TOKEN_STRING: printf("STRING"); break
      |         ^~~~
./samples/SAFE/__tmp_dd900f55.c:164:9: error: expected declaration or statement at end of input
